--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,8 @@ Icon
 .Spotlight-V100
 .Trashes
 node_modules/
-db/
-client/lib
-bower_components/
+client/app/bower_components/
+client/app/dist/
 
 # Floobits
 .floo
