--- a/package.json
+++ b/package.json
@@ -30,7 +30,15 @@
     "morgan": "^1.6.1",
     "nodemailer": "~0.7.1",
     "nodemon": "^1.7.3",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^1.0.0",
+    "grunt-shell": "^1.1.2"
   },
   "engines": {
     "node": "4.2.1",
