--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^1.0.0",
+    "grunt-shell": "^1.1.2",
     "jwt-simple": "^0.3.1",
     "mongodb": "^2.0.46",
     "mongodb-uri": "^0.9.7",
@@ -31,14 +39,7 @@
     "nodemailer": "~0.7.1",
     "nodemon": "^1.7.3",
     "q": "^1.4.1",
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.0.0",
-    "grunt-shell": "^1.1.2"
+    "twilio": "^2.5.2"
   },
   "engines": {
     "node": "4.2.1",
