--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
+    "postinstall": "bower install && ./node_modules/grunt-cli/bin/grunt build",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,10 @@
     "aws-sdk": "^2.2.12",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
+    "bower": "^1.3.1",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-sass": "^0.9.2",
