--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "bower": "^1.3.1",
+    "braintree": "^1.30.0",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -33,6 +34,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.0.0",
     "grunt-shell": "^1.1.2",
+    "http": "0.0.0",
     "jwt-simple": "^0.3.1",
     "mongodb": "^2.0.46",
     "mongodb-uri": "^0.9.7",
@@ -41,6 +43,7 @@
     "nodemailer": "~0.7.1",
     "nodemon": "^1.7.3",
     "q": "^1.4.1",
+    "querystring": "^0.2.0",
     "twilio": "^2.5.2"
   },
   "engines": {
