--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.14.1",
     "bower": "^1.3.1",
     "braintree": "^1.30.0",
+    "braintree-web": "^2.15.4",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -44,6 +45,7 @@
     "nodemon": "^1.7.3",
     "q": "^1.4.1",
     "querystring": "^0.2.0",
+    "stripe": "^4.0.0",
     "twilio": "^2.5.2"
   },
   "engines": {
